--- a/css/post.css
+++ b/css/post.css
@@ -35,6 +35,7 @@
             border: 1px solid #ddd;
             padding: 5px;
 			height: 250px;
+            object-fit: cover;
         }
 		.thumb-fl img {
             -webkit-filter: grayscale(0);
@@ -64,29 +65,30 @@
             max-width:100%;
             height:auto;
         }
-	.bottom-right {
-		position: absolute;
-		bottom: 12px;
-		right: 16px;
-		background: rgba(0, 0, 0, 0.5); /* Black background with transparency */
-		color: #f1f1f1;
-		width: 25%;
-		padding: 2px;
-	}
-	.bottom-left {
-		position: absolute;
-		bottom: 12px;
-		left: 16px;
-		background: rgba(0, 0, 0, 0.5); /* Black background with transparency */
-		color: #f1f1f1;
-		width: 25%;
-		padding: 2px;
-	}
-	.bottom-left-bg {
-		position: absolute;
-		bottom: 6px;
-		left: 26px;
-		color: #f1f1f1;
-		width: 25%;
-		padding: 2px;
-	}
+		.bottom-right {
+			position: absolute;
+			bottom: 12px;
+			right: 16px;
+			background: rgba(0, 0, 0, 0.5); /* Black background with transparency */
+			color: #f1f1f1;
+			width: 25%;
+			padding: 2px;
+		}
+		.bottom-left {
+			position: absolute;
+			bottom: 12px;
+			left: 16px;
+			background: rgba(0, 0, 0, 0.5); /* Black background with transparency */
+			color: #f1f1f1;
+			width: 25%;
+			padding: 2px;
+		}
+		.bottom-left-bg {
+			position: absolute;
+			bottom: 6px;
+			left: 26px;
+			color: #f1f1f1;
+			width: 25%;
+			padding: 2px;
+		}
+
