--- a/css/post.css
+++ b/css/post.css
@@ -97,9 +97,11 @@ body {
  background:#f5f5f5;
 }
 .menu {
-    font-size: 14px;
+    font-size: 16px;
     font-family: "Trebuchet MS", sans-serif;
+    line-height: 1.4;
+    font-weight: 400;
 }
 .pad {
-    padding: 20px 20px 20px 20px;
+    padding: 5px;
 }
